# charade

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-lock  Pipfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: asset-manifest.json  index.html  precache-manifest.1794c21668ae206c270492e452dbebce.js  precache-manifest.85493895d05738d3f86fced00bdbf6a2.js  service-worker.js
app/static/js/: 2.4f18e84e.chunk.js  2.4f18e84e.chunk.js.map  2.f69158a4.chunk.js  2.f69158a4.chunk.js.map  main.486270fa.chunk.js  main.486270fa.chunk.js.map  main.8a52a43d.chunk.js  main.8a52a43d.chunk.js.map  runtime-main.fda89fee.js  runtime-main.fda89fee.js.map
examples/: request.json  request.sh  request_allen_ner.json  request_bert_NSP.json  request_bert_category.json  request_bert_sentiment.json  request_category.json  request_fiscal.json  request_lda.json  request_nltk.json  request_reprise.json  request_sentiment.json  request_summarization.json  request_translation.json
resources/names/: it.txt
scripts/: build-docker.sh  build-frontend.sh  lock.sh
scripts/bert/: 0-get-italian-model.sh
src/: main.py  prod.py  server.py
src/common/bert/: logger.py  (+4 more)
src/services/: __init__.py  allen.py  bert.py  gensim.py  misc.py  nltk.py  opennmt.py  pytorch.py  regex.py  sklearn.py  spacy.py  textrank.py
tests/: test_server.py
tests/services/: test_textrank.py
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.jsx  Languages.jsx  Params.jsx  Response.jsx  Service.jsx  ServiceLine.jsx  ServiceList.jsx  Text.jsx  api.js  theme.js
(+58 files in other folders)
