[tool.poetry]
name = "charade"
version = "0.1.0"
description = "A server for multilanguage, composable NLP API in Python"
authors = ["Andrea Ferretti <ferrettiandrea@gmail.com>"]
license = "Apache2"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
allennlp = ">=0.8.3"
spacy = "^2.3.5"
bottle = "^0.12.19"
dateparser = "^1.0.0"
langdetect = "^1.0.8"
networkx = "^2.5"
Cerberus = "^1.3.2"
gensim = "^3.8.3"
nltk = "^3.5"
OpenNMT-py = "^1.2.0"
transformers = ">=3.0"
pandas = "^1.1.5"
ekphrasis = "^0.5.1"
pyuwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
